--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-i18n2",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha.1",
   "license": "MIT",
   "main": "./lib/index.js",
   "module": "./es/index.mjs",
@@ -25,6 +25,7 @@
     "@babel/plugin-syntax-dynamic-import": "~7.8.3",
     "@babel/preset-env": "~7.14.8",
     "@types/eslint": "^7.28.0",
+    "@types/estree": "^0.0.50",
     "@types/node": "^14.17.6",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
