perf: 将配置移入 settings 以在 rules 之间共享

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "alwaysStrict": true,
     "declaration": true,
     "esModuleInterop": true,
+    "exactOptionalPropertyTypes": true,
     "experimentalDecorators": false,
     "importHelpers": false,
     "jsx": "preserve",
