--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "lerna": "^4.0.0",
     "lint-staged": "^8.1.0",
     "prettier": "^2.1.0",
-    "typescript": "^4.3.2",
+    "typescript": "^4.4.0-beta",
     "wc-bundler": "^0.9.1",
     "yorkie": "^2.0.0"
   },
