--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "lerna": "^4.0.0",
     "lint-staged": "^8.1.0",
     "prettier": "^2.1.0",
+    "types-lib": "^0.9.0",
     "typescript": "^4.4.0-beta",
     "wc-bundler": "^0.9.1",
     "yorkie": "^2.0.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.14.8"
+    "@babel/runtime": "^7.14.8",
+    "os-locale": "^5.0.0"
   },
   "peerDependencies": {
     "eslint": "*"
