--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,6 +54,7 @@
         "prefer-spread": "off",
         "@typescript-eslint/no-empty-function": "off",
         "@typescript-eslint/no-empty-interface": "off",
+        "@typescript-eslint/no-namespace": "off",
         "@typescript-eslint/no-unused-vars": "error"
       }
     },
