--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-i18n2",
-  "version": "0.0.1-alpha.5",
+  "version": "0.0.1-rc.0",
   "license": "MIT",
   "main": "./lib/index.js",
   "module": "./es/index.mjs",
