--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@babel/runtime": "^7.14.8",
     "eslint-utils2": "^3.1.0-alpha.1",
+    "iter-tools": "^7.1.3",
     "json-schema": "^0.3.0",
     "os-locale": "^5.0.0"
   },
