--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,5 @@
     "source.fixAll": true
   },
   "typescript.tsdk": "node_modules/typescript/lib",
-  "cSpell.words": [
-    "quasis"
-  ]
+  "cSpell.words": ["quasis"]
 }
