--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-i18n2",
-  "version": "0.0.1-rc.3",
+  "version": "0.0.1-rc.4",
   "license": "MIT",
   "main": "./lib/index.js",
   "module": "./es/index.mjs",
@@ -48,6 +48,7 @@
   "dependencies": {
     "@babel/runtime": "^7.14.8",
     "eslint-utils2": "^3.1.0-alpha.1",
+    "html-entities": "^2.3.2",
     "iter-tools": "^7.1.3",
     "json-schema": "^0.3.0",
     "os-locale": "^5.0.0"
