--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.14.8",
-    "eslint-utils2": "^3.1.0-alpha.1",
+    "eslint-utils2": "^3.1.0-rc.1",
     "html-entities": "^2.3.2",
     "iter-tools": "^7.1.3",
     "json-schema": "^0.3.0",
